--- a/vignettes/getting_started.rmd
+++ b/vignettes/getting_started.rmd
@@ -95,7 +95,7 @@ NB: An important thing to know is that some generic functions, such as `subset` 
 
 ## Make Seurat object compatible with semla
 
-If you have a `Seurat` object with Visium data that was prepared using `Read10X_Image`, it is possible to add a `Staffli` object for compatibility with `semla` using the `AddSemlaToSeurat` function.
+If you have a `Seurat` object with Visium data that was prepared using `Read10X_Image`, it is possible to add a `Staffli` object for compatibility with `semla` using the `UpdateSeuratForSemla` function.
 
 By doing so, you can now use both spatial visualization functions from `Seurat` and `semla`.
 
@@ -112,7 +112,7 @@ InstallData("stxBrain")
 brain <- LoadData("stxBrain", type = "anterior1")
 
 # Make Seurat object compatible with semla
-brain_semla <- AddSemlaToSeurat(brain)
+brain_semla <- UpdateSeuratForSemla(brain)
 
 # Load H&E images
 brain_semla <- LoadImages(brain_semla)
@@ -124,4 +124,3 @@ MapFeatures(brain_semla, features = "nFeature_Spatial",
 # Plot with Seurat
 SpatialFeaturePlot(brain_semla, features = "nFeature_Spatial")
 ```
-
